# reglex

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE
cmake/: Conan.cmake
include/: CMakeLists.txt
include/ctre/: ctre.hpp
include/reglex/: reglex.hpp
src/reglex/: CMakeLists.txt  main.cpp
