cc_library(
    name = "reglex-private",
    hdrs = glob(["include/**/*.hpp"]),
    srcs = glob(["src/**/*.cpp"]),
    deps = [
        "@magic_enum",
    ],
    strip_include_prefix = "include",
    copts = ["-Wno-type-limits"],
)

cc_binary(
    name = "reglex",
    srcs = ["src/reglex/main.cpp"],
    deps = [
        ":reglex-private",
    ],
)

